--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
     # The SDK version used to compile the project
     - android-28
 
-  before_install:
+  before_script:
     - chmod +x gradlew
 
   script:
