--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ android:
     # Uncomment the lines below to
     # use the latest revision of Android SDK Tools
     - tools
-    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
-    # - platform-tools
+    #- tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - platform-tools
+
+    # The BuildTools version used by the project
+    - build-tools-28.0.3
 
     # The SDK version used to compile the project
     - android-28
