--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ android:
 
     # The SDK version used to compile the project
     - android-28
-    
+  before_install:
+    - chmod +x gradlew
   script:
-    - chmod +x ./gradlew build connectedCheck
     - ./gradlew clean build
