--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,9 @@ android:
     - android-28
   before_install:
     - chmod +x gradlew
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
   script:
     - ./gradlew clean build
