--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,13 @@ android:
 
     # The SDK version used to compile the project
     - android-28
-  before_install:
-    - chmod +x gradlew
+  before_script:
     - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+    - adb shell input keyevent 82 & 
+  before_install:
+    - chmod +x gradlew
+
   script:
     - ./gradlew clean build
