--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 sudo: false
+
 android:
   components:
     # Uncomment the lines below to
@@ -13,13 +14,16 @@ android:
 
     # The SDK version used to compile the project
     - android-28
-  before_script:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 & 
+
   before_install:
     - chmod +x gradlew
 
   script:
+    - ./gradlew assemble lint
+    
+  after_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 & 
     - ./gradlew clean build
