--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,24 @@
 language: android
+jdk: oraclejdk8
 sudo: false
 
 android:
   components:
-    # Uncomment the lines below to
-    # use the latest revision of Android SDK Tools
-    - tools
-    #- tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
-
-    # The BuildTools version used by the project
-    - build-tools-28.0.3
-
-    # The SDK version used to compile the project
-    - android-28
+    - tools
+    - build-tools-24.0.2
+    - android-22
+    - android-24
+    - sys-img-armeabi-v7a-android-22
+    - extra-android-m2repository
 
   before_install:
-    - chmod +x gradlew
-
-  script:
-    - ./gradlew assemble lint
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+   - adb shell input keyevent 82 &
+ 
     
-  after_script:
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 & 
+  script:
     - ./gradlew clean build
+    
