--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ android:
     - tools
     - build-tools-28.0.3
     - android-28
+    - android-22
     - sys-img-armeabi-v7a-android-22
     - extra-android-m2repository
 
-  before_install:
+  before_script:
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
