--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 jdk: oraclejdk8
-sudo: false
+sudo: required
 
 android:
   components:
@@ -13,13 +13,8 @@ android:
     - extra-android-m2repository
 
   before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-   - adb shell input keyevent 82 &
- 
+
     
   script:
-    ./gradlew clean
-    ./gradlew assembleDebug
+    ./gradlew build --stacktrace
     
