--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 jdk: oraclejdk8
-sudo: required
+sudo: false   
 
 android:
   components:
@@ -17,6 +17,6 @@ android:
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
-  script:
-    ./gradlew build --stacktrace
+   script: 
+    - ./gradlew connectedAndroidTest
     
